[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "doublehelix-<fillme>"
description = "<fillme>"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "<fillme>", email = "<fillme>" }]
keywords = ["bioinformatics", "genetics", "wgs", "microarray", "science"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    "setuptools",
]

[project.urls]
Documentation = "https://doublehelix.app"
homepage = "https://github.com/DoubleHelixApp/DoubleHelix"
Repository = "https://github.com/DoubleHelixApp/DoubleHelix"
Issues = "https://github.com/DoubleHelixApp/DoubleHelix/issues"
Changelog = "https://github.com/DoubleHelixApp/DoubleHelix/releases"

[tool.setuptools.packages.find]
include = ["helix.plugins.myplugin"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "helix/plugins/myplugin/VERSION.py"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers -p no:warnings --no-header"
testpaths = [
    "test"
]
filterwarnings = [
    'ignore:DeprecationWarning',
]
